@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 0.999375-12
-Date: 2008-08-26
+Date: 2008-08-28
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Doug and Martin <Matrix-authors@R-project.org>
